--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ python-dateutil==2.8.1
 python-decouple==3.3
 python-dotenv==0.15.0
 pytz==2019.3
-pywin32==304
+# pywin32==304
 PyYAML==5.4.1
 query-string==2019.4.13
 requests==2.26.0
