--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ pathspec==0.9.0
 Pillow==7.1.1
 psycopg2==2.8.4
 public==2019.4.13
-pypiwin32==223
+# pypiwin32==223
 python-dateutil==2.8.1
 python-decouple==3.3
 python-dotenv==0.15.0
